# ubdc_cctvapi

./: .gitignore  LICENCE  README.md  build.ps1  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
tests/: test_api.py
ubdc_cctvapi/: api.py
