[metadata]
name = ubdc_cctvapi
author = nick ves
author_email = nick.ves@glasgow.ac.uk
description = an API client to fetch cctv data
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
install_requires = requests < 3.0

[bumpversion]
current_version = 0.1.0
commit = False
tag = False
[bumpversion:file:ubdc_cctvapi/__init__.py]
